--- a/webpack-demo/package.json
+++ b/webpack-demo/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^1.0.0",
+    "jquery": "^3.3.1",
     "style-loader": "^0.23.0",
     "vue": "^2.5.17",
     "vue-loader": "^15.4.2",
