--- a/webpack-demo2/package.json
+++ b/webpack-demo2/package.json
@@ -25,7 +25,13 @@
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "jquery": "^3.3.1",
+    "less-loader": "^4.1.0",
+    "postcss": "^7.0.5",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-sprites": "^4.2.1",
     "style-loader": "^0.23.0",
     "vue": "^2.5.17",
     "vue-loader": "^15.4.2",
@@ -37,6 +43,7 @@
   },
   "dependencies": {
     "clean-webpack-plugin": "^0.1.19",
-    "html-webpack-plugin": "^3.2.0"
+    "html-webpack-plugin": "^3.2.0",
+    "less": "^3.8.1"
   }
 }
