--- a/webpack-demo2/package.json
+++ b/webpack-demo2/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "webpack-dev-server --open",
-    "build": "webpack --config webpack.config.js --mode development"
+    "dev": "webpack-dev-server --env development --open --config build/webpack.common.conf.js",
+    "build": "webpack --env production --config build/webpack.common.conf.js"
   },
   "keywords": [],
   "author": "",
@@ -25,7 +25,7 @@
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "jquery": "^3.3.1",
     "less-loader": "^4.1.0",
     "postcss": "^7.0.5",
