--- a/webpack-demo3/package.json
+++ b/webpack-demo3/package.json
@@ -12,11 +12,13 @@
   "license": "ISC",
   "devDependencies": {
     "connect-history-api-fallback": "^1.5.0",
+    "css-loader": "^1.0.0",
     "express": "^4.16.3",
     "html-webpack-plugin": "^3.2.0",
     "http-proxy-middleware": "^0.19.0",
     "jquery": "^3.3.1",
     "opn": "^5.4.0",
+    "style-loader": "^0.23.1",
     "vue": "^2.5.17",
     "vue-loader": "^15.4.2",
     "vue-template-compiler": "^2.5.17",
