--- a/webpack-demo2/package.json
+++ b/webpack-demo2/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --env development --open --config build/webpack.common.conf.js",
-    "build": "webpack --env production --config build/webpack.common.conf.js"
+    "dev": "webpack-dev-server --env development --open --config build/webpack.common.conf.js --mode development",
+    "build": "webpack --env production --config build/webpack.common.conf.js --mode production"
   },
   "keywords": [],
   "author": "",
