--- a/webpack-demo2/package.json
+++ b/webpack-demo2/package.json
@@ -15,6 +15,7 @@
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "babel-loader": "^8.0.4",
+    "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
     "eslint": "^5.6.1",
     "eslint-config-standard": "^12.0.0",
@@ -28,6 +29,7 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "jquery": "^3.3.1",
     "less-loader": "^4.1.0",
+    "mini-css-extract-plugin": "^0.4.4",
     "postcss": "^7.0.5",
     "postcss-cssnext": "^3.1.0",
     "postcss-loader": "^3.0.0",
@@ -43,7 +45,6 @@
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
-    "clean-webpack-plugin": "^0.1.19",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.8.1"
   }
