--- a/webpack-demo4/package.json
+++ b/webpack-demo4/package.json
@@ -8,6 +8,7 @@
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "lint": "eslint --ext .js,.vue src",
+    "fix": "eslint --fix --ext .js,.vue src",
     "build": "node build/build.js",
     "dll": "webpack --config build/webpack.dll.conf.js --progress --display-modules"
   },
